monitoria/mac323/5-3-24/grades/Matheus-Tavares-Bernardino_201348_assignsubmission_file_FindAllOccurrences.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CC......
EP: Matheus-Tavares-Bernardino_201348_assignsubmission_file_FindAllOccurrences
NOTA: 100
CORREÇÃO AUTOMÁTICA
1200 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
2 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Brute_003 ============
Note: ./Brute.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

real	0m0.184s
user	0m0.232s
sys	0m0.024s
partially correct (200) perfeito
======= Brute_004 ============

real	0m0.176s
user	0m0.176s
sys	0m0.060s
partially correct (200) perfeito
======= Brute_005 ============

real	0m0.166s
user	0m0.192s
sys	0m0.032s
partially correct (200) perfeito
======= KMP_000 ============
Note: ./KMP.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

real	0m0.167s
user	0m0.196s
sys	0m0.016s
partially correct (200) perfeito
======= KMP_001 ============

real	0m0.166s
user	0m0.192s
sys	0m0.028s
partially correct (200) perfeito
======= KMP_002 ============

real	0m0.164s
user	0m0.188s
sys	0m0.028s
partially correct (200) perfeito
